# country-template

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  bootstrap.sh  bootstrapping-country-package.py  circle.yml  deploy-if-version-bump.sh  first-time-setup.sh  pyproject.toml  setup.cfg  setup.py
.circleci/: check-version-bump.sh  config.yml  deploy-python-2.sh  deploy-python-3.sh  detect-functional-changes.sh  is-version-number-acceptable.sh  publish-git-tag.sh  publish-python-package.sh  test-api.sh
.conda/: README.md  meta.yaml  recipe.yaml  variants.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  first-time-setup.yml  get_pypi_info.py  has-functional-changes.sh  is-version-number-acceptable.sh  lint-changed-python-files.sh  lint-changed-yaml-tests.sh  lint-files.sh  publish-git-tag.sh  test-api.sh
.github/workflows/: bootstrap.yml  build.yml  deploy.yml  first-time-setup.yml  validate.yml  workflow.yml
openfisca_country_template/: __init__.py  entities.py
openfisca_country_template/parameters/benefits/: basic_income.yaml  housing_allowance.yaml  index.yaml  parenting_allowance.yaml
openfisca_country_template/parameters/general/: age_of_majority.yaml  age_of_retirement.yaml
openfisca_country_template/parameters/taxes/: housing_tax.yaml  income_tax_rate.yaml  social_security_contribution.yaml
openfisca_country_template/reforms/: __init__.py  add_dynamic_variable.py  add_new_tax.py  flat_social_security_contribution.py  modify_social_security_taxation.py  removal_basic_income.py
openfisca_country_template/situation_examples/: __init__.py  couple.json  housing.json  run.py  single.json
openfisca_country_template/tests/: age.yaml  an_scenario.yaml  disposable_income.yaml  housing_tax.yaml  social_security_contribution.yaml
openfisca_country_template/tests/reforms/: add_dynamic_variable.yaml  add_new_tax.yaml
openfisca_country_template/tests/situations/: a_single_parent_with_a_child.yaml  income_tax.yaml  parenting_allowance.yaml
openfisca_country_template/variables/: __init__.py  benefits.py  demographics.py  housing.py  income.py  stats.py  taxes.py
