[project]
name = "openfisca-country_template"
version = "7.1.3"
description = "OpenFisca Rules as Code model for Country-Template."
readme = "README.md"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
authors = []
maintainers = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "openfisca-core[web-api] >=41.4.5, <42.0.0"
]

[project.urls]
Homepage = "https://github.com/openfisca/country-template"
Repository = "https://github.com/openfisca/country-template"
Documentation = "https://openfisca.org/doc"
Issues = "https://github.com/openfisca/country-template/issues"
Changelog = "https://github.com/openfisca/country-template/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "autopep8 >=2.0.4",
    "flake8 >=7.0.0",
    "isort >=5.13.2",
    "pylint >=3.1.0",
    "pyupgrade >=3.15.1",
    "yamllint >=1.35.1"
]

[tool.pytest.ini_options]
addopts = "--showlocals --doctest-modules"
testpaths = [ "openfisca_country_template/tests" ]
python_files = "**/*.py"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
]

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "no-self-argument",
    "invalid-enum-extension",
    "no-member",
    "not-callable",
    "duplicate-code",
    "too-many-locals",
    "fixme",
    "unused-argument",
    "redefined-outer-name"
]
score = "no"

[tool.isort]
case_sensitive = "true"
force_alphabetical_sort_within_sections = "false"
group_by_package = "true"
include_trailing_comma = "true"
multi_line_output = "8"
py_version = "39"
known_first_party = "openfisca_country_template"
known_openfisca = [
    "openfisca_core",
    "openfisca_country_template"
]
known_typing = [
    "mypy*", 
    "*types*", 
    "*typing*"
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "OPENFISCA",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
