[project]
name = "openfisca-country_template"
version = "7.1.6"
dependencies = [
    "openfisca-core[web-api] >= 43",
]
requires-python = ">=3.9"
authors = []
maintainers = []
description = "OpenFisca Rules as Code model for Country-Template."
readme = "README.md"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
    "black >=24.8.0, <25.0",
    "isort >=5.13.2, <6.0",
    "ruff >=0.6.9, <1.0",
    "ruff-lsp >=0.0.57, <1.0",
    "yamllint >=1.35.1"
]

[project.urls]
Homepage = "https://github.com/openfisca/country-template"
Repository = "https://github.com/openfisca/country-template"
Documentation = "https://openfisca.org/doc"
Issues = "https://github.com/openfisca/country-template/issues"
Changelog = "https://github.com/openfisca/country-template/blob/main/CHANGELOG.md"


[tool.black]
target_version = ["py39", "py310", "py311"]

[tool.isort]
case_sensitive = true
combine_as_imports = true
force_alphabetical_sort_within_sections = false
group_by_package = true
honor_noqa = true
include_trailing_comma = true
known_first_party = ["openfisca_country_template"]
known_openfisca = ["openfisca_core", "openfisca_extension_template"]
known_typing = ["*collections.abc*", "*typing*", "*typing_extensions*"]
known_types = ["*types*"]
multi_line_output = 3
profile = "black"
py_version = 39
sections = [
    "FUTURE",
    "TYPING",
    "TYPES",
    "STDLIB",
    "THIRDPARTY",
    "OPENFISCA",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.pytest.ini_options]
addopts = "--exitfirst --showlocals --doctest-modules"
testpaths = [ "openfisca_country_template/tests" ]
python_files = "**/*.py"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
ignore = [
    "ANN",
    "COM812",
    "D101",
    "D104",
    "I001",
    "ISC001",
    "N801",
    "N805",
    "N806",
    "PLR2004",
    "PTH100",
    "PTH118",
    "PTH120",
    "PTH123",
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
